# etl-promo-products

./: .gitignore  README.md  main.py  pyproject.toml
src/services/: AsyncRequestsInterface.py  HttpxAdapter.py
src/services/interfaces/: AsyncRequestsInterface.py
test/: test_HttpAdapter.py
