[project]
name = "etl-promo-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "respx>=0.22.0"]

[tool.ruff]
line-length = 80
fix = true
show-fixes = true
indent-width = 4
exclude = [".venv"]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D107", "N999", "S101"]

[tool.ruff.lint.pydocstyle]
ignore-decorators = ["abc.abstractmethod", "abstractmethod", "override"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
